[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/Selector.gd" type="Script" id=1]

[node name="Selector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 80.0
margin_bottom = 100.0
text = "Select Your Class"
align = 1
valign = 1

[node name="Player1" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -100.0
margin_right = 150.0
text = "Berserker"

[node name="Player2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0
text = "Adventurer"

[node name="Player3" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -100.0
margin_right = -50.0
text = "Knight"

[node name="Label2" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -200.0
margin_right = 179.0
margin_bottom = -100.0
text = "A class who grows
 stronger as the player 
loses lives. At base 
your damage will 
scale as lives are lost."
align = 1
valign = 1

[node name="Label5" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -296.0
margin_right = 179.0
margin_bottom = -196.0
text = "HP: 5/5
Attack: 4/5
Defense: 3/5
Speed: 3/5"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 424.0
margin_top = -200.0
margin_right = 604.0
margin_bottom = -100.0
text = "A class who grows
stronger as the player 
collects coins. At base 
your characters hp will 
scale as coins are collected."
align = 1
valign = 1

[node name="Label6" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 440.0
margin_top = -304.0
margin_right = 587.0
margin_bottom = -204.0
text = "HP: 2/5
Attack: 2/5
Defense: 1/5
Speed: 5/5"
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 832.0
margin_top = -200.0
margin_right = 1012.0
margin_bottom = -100.0
text = "A class who grows
stronger as the player 
slays enemies. At base 
your characters defense will 
scale as enemies are slain."
align = 1
valign = 1

[node name="Label7" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 848.0
margin_top = -304.0
margin_right = 995.0
margin_bottom = -204.0
text = "HP: 3/5
Attack: 3/5
Defense: 5/5
Speed: 2/5"
align = 1
valign = 1

[connection signal="pressed" from="Player1" to="." method="_on_Player1_pressed"]
[connection signal="pressed" from="Player2" to="." method="_on_Player2_pressed"]
[connection signal="pressed" from="Player3" to="." method="_on_Player3_pressed"]
